# MCP-Server

./: .env  Dockerfile  README.md  pyproject.toml
.continue/mcpServers/: config.yaml
my-mcp/: README.md  alembic.ini  pyproject.toml
my-mcp/data/: app.db  database.db  notes.json
my-mcp/migrations/: env.py
my-mcp/migrations/versions/: 491ac8946924_init.py  6c09eefd6c2d_create_weather_schema.py
my-mcp/src/my_mcp/: server.py
my-mcp/src/my_mcp/db/: models.py  seed.py  session.py
